* Wed Feb 26 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.1.0-0
- Ensure that the Hiera backend recurses as little as possible to improve
  performance.
- Remove all support for v1 data since it was experimental and removed in 3.0.0

* Wed Dec 11 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.1.0-0
- Add EL8 support

* Wed Aug 21 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.2-0
- Update confinement logic to ensure that all possibilities are collected
- Add debugging logs to enforcement logic
- Raise errors on malformed data
- Increase supported simp/simplib version to < 5

* Mon Aug 12 2019 Robert Vincent <pillarsdotnet@gmail.com> - 3.0.2-0
- Support puppetlabs/stdlib 6.x.

* Fri Aug 09 2019 Dylan Cochran <dylan.cochran@onyxpoint.com> - 3.0.1-0
- Add confinement on modules and facts to SIMP Compliance Engine.

* Wed Aug 07 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.0-0
- Converted the `compliance_map` function to a Puppet 4 function called
  `compliance_markup::compliance_map()`
- The old puppet 3 function is deprecated and will be removed in the 3.1.0-0
  release of this module
- Make the 'timestamp' in the client-side report optional to prevent puppet
  from triggering file resource changes every time
- Remove the experimental v1 data since it is no longer used
- Remove partial v2 data sets
- Add v2 data for the non-SIMP `yum` module

* Fri Jun 28 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.5.0-0
- Fix compliance markup validation for Defined Types

* Tue Jun 25 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.4.5-0
- Fix call to Hiera.warn in the compliance mapper

* Mon Jun 24 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.4.4-0
- Revert change from __dir__ to File.dirname(__FILE__) in compliance_map.rb due
  to discovered incompatibility with some puppetserver configurations.
- Add log statement if invalid JSON or YAML files are found when loading.
- Remove management of simp::sssd::client::ldap_domain from the mappings since